--- a/raspberrypi/lircd.conf
+++ b/raspberrypi/lircd.conf
@@ -1,14 +1,8 @@
-# Please make this file available to others
-# by sending it to <lirc@bartelmus.de>
-#
-# this config file was automatically generated
-# using lirc-0.9.0-pre1(default) on 2015
-#
 # contributed by Jun Ichikawa
 #
 # brand: DAIKO
-# model no. of remote control: <% MODEL No. %>
-# devices being controlled by this remote: <% DEVICE %>
+# model no. of remote control: TAS-52591
+# devices being controlled by this remote: DCH-38338Y
 #
 
 begin remote
